[tool.poetry]
name = "gdz_ukraine"
version = "0.1.0"
description = ""
authors = ["nacknime-official <nacknime.official@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "*"
httpx = "*"
alembic = "*"
python-dotenv = "*"
gino = "==1.0.1"
psycopg2-binary = "2.9.3"
uvloop = "*"
ujson = "*"
aiohttp = "*"
click = "*"
pillow = "*"
pymongo = "*"
motor = "*"
asyncpg = "0.27.0"

[tool.poetry.dev-dependencies]
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
